infra/k8s/recommned-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommend
  template:
    metadata:
      labels:
        app: recommend
    spec:
      containers:
        - name: recommend
          image: ngquangan/healthcare-recommend
---
apiVersion: v1
kind: Service
metadata:
  name: recommend-srv
spec:
  selector:
    app: recommend
  ports:
    - name: recommend
      protocol: TCP
      port: 3005
      targetPort: 3005
