infra/k8s/transfer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer
  template:
    metadata:
      labels:
        app: transfer
    spec:
      containers:
        - name: transfer
          image: ngquangan/healthcare-transfer
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-srv
spec:
  selector:
    app: transfer
  ports:
    - name: transfer
      protocol: TCP
      port: 3010
      targetPort: 3010
