infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: healthcare.local
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: main-srv
              servicePort: 3000
